--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Coffee Shop</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>Home</title>
 </head>
 <body>
-  <header>
-    <h1>Welcome to the Coffee Shop</h1>
-  </header>
-  <main>
-    <div id="coffee-menu"></div>
-  </main>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="js/main.js"></script>
+    <div class="container">
+        <h1 class="mt-5">Welcome to the Coffee Shop</h1>
+        <div class="mt-3">
+            <a href="register.html" class="btn btn-primary">Register</a>
+            <a href="login.html" class="btn btn-secondary">Login</a>
+            <a href="coffee.html" class="btn btn-success">Coffee Items</a>
+            <a href="cart.html" class="btn btn-warning">Cart</a>
+        </div>
+    </div>
 </body>
 </html>
