--- a/frontend/coffee.html
+++ b/frontend/coffee.html
@@ -7,6 +7,34 @@
     <title>Coffee Items</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand">Coffee Shop</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">        
+              <li class="nav-item">
+                <a class="nav-link" href="coffee.html">Coffee</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="cart.html">Cart</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">        
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="register.html">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="login.html">Login</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <div class="container">
         <h2 class="mt-5">Coffee Items</h2>
         <div id="coffeeList" class="row"></div>
@@ -14,50 +42,5 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/coffee.js"></script>
-
-    <script>
-        $(document).ready(function() {
-            $.ajax({
-                url: '/coffee',
-                type: 'GET',
-                success: function(data) {
-                    data.forEach(item => {
-                        $('#coffeeList').append(`
-                            <div class="col-md-4">
-                                <div class="card mb-4">
-                                    <img src="${item.image}" class="card-img-top" alt="${item.name}">
-                                    <div class="card-body">
-                                        <h5 class="card-title">${item.name}</h5>
-                                        <p class="card-text">${item.description}</p>
-                                        <p class="card-text">$${item.price}</p>
-                                        <button class="btn btn-primary addToCart" data-id="${item._id}">Add to Cart</button>
-                                    </div>
-                                </div>
-                            </div>
-                        `);
-                    });
-
-                    $('.addToCart').on('click', function() {
-                        const id = $(this).data('id');
-                        const token = localStorage.getItem('token');
-                        $.ajax({
-                            url: `/cart/${id}`,
-                            type: 'POST',
-                            headers: { 'Authorization': token },
-                            success: function(response) {
-                                alert(response.message);
-                            },
-                            error: function(response) {
-                                alert(response.responseJSON.message);
-                            }
-                        });
-                    });
-                },
-                error: function(response) {
-                    alert(response.responseJSON.message);
-                }
-            });
-        });
-    </script>
 </body>
 </html>
