--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,34 @@
     <title>Home</title>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand">Coffee Shop</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">        
+          <li class="nav-item">
+            <a class="nav-link" href="coffee.html">Coffee</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="cart.html">Cart</a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">        
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="register.html">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Login</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <div class="container">
         <h1 class="mt-5">Welcome to the Coffee Shop</h1>
         <div class="mt-3">
