--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,6 +7,24 @@
     <title>Login</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand">Coffee Shop</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">        
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="register.html">Register</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link active" href="login.html">Login</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <div class="container">
         <h2 class="mt-5">Login</h2>
         <form id="loginForm">
@@ -25,25 +43,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/login.js"></script>
 
-    <script>
-        $('#loginForm').on('submit', function(e) {
-            e.preventDefault();
-            $.ajax({
-                url: 'http:localhost:5000/auth/login',
-                type: 'POST',
-                data: {
-                    username: $('#username').val(),
-                    password: $('#password').val()
-                },
-                success: function(response) {
-                    localStorage.setItem('token', response.token);
-                    window.location.href = 'coffee.html';
-                },
-                error: function(response) {
-                    alert(response.responseJSON.message);
-                }
-            });
-        });
-    </script>
 </body>
 </html>
