--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,52 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <title>Register</title>
-</head>
-<body>
-    <div class="container">
-        <h2 class="mt-5">Register</h2>
-        <form id="registerForm">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" class="form-control" id="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script>
-        $('#registerForm').on('submit', function(e) {
-            e.preventDefault();
-            $.ajax({
-                url: 'http:localhost:5000/auth/register',
-                type: 'POST',
-                data: {
-                    username: $('#username').val(),
-                    password: $('#password').val()
-                },
-                success: function(response) {
-                    alert(response.message);
-                    window.location.href = 'login.html';
-                },
-                error: function(response) {
-                    alert(response.responseJSON.message);
-                }
-            });
-        });
-    </script>
-</body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,6 +9,24 @@
 </head>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand">Coffee Shop</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">        
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="register.html">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Login</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <div class="container">
         <h2 class="mt-5">Register</h2>
         <form id="registerForm">
