--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand">Coffee Shop</a>
+      <a class="navbar-brand" href="index.html">Coffee Shop</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -21,9 +22,12 @@
           <li class="nav-item">
             <a class="nav-link" href="cart.html">Cart</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="addCoffee.html">Add Coffee</a>
+          </li>
         </ul>
       </div>
-      <div>
+      <div id="authLinks">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">        
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="register.html">Register</a>
@@ -35,14 +39,25 @@
       </div>
     </div>
   </nav>
-    <div class="container">
-        <h1 class="mt-5">Welcome to the Coffee Shop</h1>
-        <div class="mt-3">
-            <a href="register.html" class="btn btn-primary">Register</a>
-            <a href="login.html" class="btn btn-secondary">Login</a>
-            <a href="coffee.html" class="btn btn-success">Coffee Items</a>
-            <a href="cart.html" class="btn btn-warning">Cart</a>
-        </div>
+  <div class="hero-section">
+    <div class="hero-content d-flex justify-content-center text-center align-items-center">
+      <h1>
+        Welcome to <br> EE-CCOFFEE
+      </h1> 
     </div>
-</body>
+  </div>
+
+  </div>
+  <div class="container d-flex flex-column justify-content-center align-items-center">
+      <h1 class="mt-5">Try our best Coffees</h1>
+      <div id="coffeeList" class="row"></div>
+      <hr>
+
+  </div>
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/main.js"></script>
+  </body>
+
 </html>
