--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Login</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand">Coffee Shop</a>
+          <a class="navbar-brand" href="index.html">Coffee Shop</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -17,28 +18,41 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">        
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="register.html">Register</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link active" href="login.html">Login</a>
-              </li>
+              </li>              
             </ul>
           </div>
         </div>
       </nav>
-    <div class="container">
-        <h2 class="mt-5">Login</h2>
-        <form id="loginForm">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" class="form-control" id="username" required>
+
+    <section class="vh-100 hero-section">
+      <div class="container py-5 h-100 text-dark">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="card shadow-2-strong" style="border-radius: 1rem;">
+              <div class="card-body p-5 text-center">
+    
+                <h3 class="mb-5">Login</h3>
+                <form id="loginForm">
+
+                <div data-mdb-input-init class="form-outline mb-4 ">
+                  <label class="form-label" for="username">Username</label>
+                  <input type="text" id="username" class="form-control form-control-lg" />
+                </div>
+    
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <label class="form-label" for="password">Password</label>
+                  <input type="password" id="password" class="form-control form-control-lg" />
+                </div>
+
+                <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+              </form>
+              </div>
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-    </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/login.js"></script>
